Fixed spacing and alignment on nav bar

--- a/Ethereal Cloud/wwwroot/css/Site.css
+++ b/Ethereal Cloud/wwwroot/css/Site.css
@@ -63,6 +63,7 @@ header::after {
     margin-left: 30px;
     padding-top: 12px;
     position: relative;
+    text-align: center;
 }
 
 .nav-link {
@@ -87,7 +88,9 @@ header::after {
     }
 
     .nav-link:hover::before {
-        width: 100%;
+        width: 80%;
+        color: aquamarine;
+        box-decoration-break:initial;
     }
 
 /* Footer */
